--- a/main.scss
+++ b/main.scss
@@ -86,7 +86,13 @@ p{
     height: 420px;
 
 }
-
+.search-bar{
+    margin: 5px;
+}
+.search-bar div{
+    padding:0;
+    margin-right: 10px;
+}
 .space{
     height:10vh;
 }
