--- a/main.css
+++ b/main.css
@@ -10518,6 +10518,11 @@ p {
 .search-bar div {
   padding: 0;
   margin-right: 10px;
+  border-radius: 0%;
+}
+
+#btn-buscar {
+  background-color: rgb(160, 160, 160);
 }
 
 .space {
