--- a/main.scss
+++ b/main.scss
@@ -92,6 +92,10 @@ p{
 .search-bar div{
     padding:0;
     margin-right: 10px;
+    border-radius: 0%;
+}
+#btn-buscar{
+    background-color: rgb(160, 160, 160)
 }
 .space{
     height:10vh;
