cambio tamaño imagenes platillo, cambio imagenes de platillos de toda la semana, posicion de divs cambiada

--- a/mainMarco.css
+++ b/mainMarco.css
@@ -5637,8 +5637,8 @@ textarea.form-control-lg {
   position: absolute;
   right: 0;
   bottom: 0;
-  left: 0;
-  top: 600px;
+  left: 110px;
+  top: 610px;
   z-index: 2;
   display: flex;
   justify-content: center;
@@ -10420,7 +10420,10 @@ textarea.form-control-lg {
   }
 }
 
-/* CSS AGREGADO *************************************************************************** */
+/* CSS AGREGADO *************************************************************************** 
+***********************************
+***********************************/
+
 html {
   min-height: 100%;
   position: relative;
@@ -10460,6 +10463,10 @@ p {
 
 .header-menu {
   height: 75vh;
+}
+
+#tituloPagina, #subtituloPagina{
+  margin-left: -153px;
 }
 
 /* .col-md-2, .col-lg-2, .col-xl-2{
@@ -10520,22 +10527,26 @@ p {
  .carousel-control-next{
   left: 740px;
   padding: 60px;
+  margin-left: 65px;
  }
 
  .carousel-control-prev{
   padding: 60px;
+  margin-left: 40px;
  }
 
  .carousel-indicators li{
   background: #000;
   height: 6px;
   border-radius: 25%;
+  padding-left: 20px;
  }
 
 /* MARCO MENU DE COMIDAS ***************************/
 .container{
   background-color: fcca5d;
   width: 95%;
+  margin-left: 80px;
 }
 
 .container-fluid{
@@ -10544,9 +10555,9 @@ p {
 }
 
 .dist-img {
-  margin-top: -150px;
+  margin-top: -140px;
   margin-bottom: 10px;
-  width: 100auto;
+  width: 100%auto;
 }
 
 .dist-img img {
@@ -10554,6 +10565,7 @@ p {
   border-radius: 50%;
   overflow: hidden;
   width: 140px;
+  height: 140px;
 }
 
 .menu-list-row .bydefault_show .dish-box-wp {
@@ -10563,7 +10575,6 @@ p {
 .menu-list-row{
   margin-top: 50px;
   margin-right: 180px;
-  
 }
 
 .sec-wp {
@@ -10597,16 +10608,15 @@ p {
   color: #ff8243;
 }
 
-.dish-title {
+/* .dish-title {
   width: 280px;
-  /* padding-right: 160px; */
-  /* padding: 0 20px; */
-}
+} */
 
 .h3-title {
-  width: 140px;
+  width: 170px;
   font-size: 22px;
   text-transform: capitalize;
+  margin-left: -15px;
   /* margin-bottom: 5px; */
   /* font-family: 'Playfair Display', serif; */
   font-weight: bold;
@@ -10616,8 +10626,7 @@ p {
   display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
-  overflow: hidden;
-  margin-top: -8px;
+  margin-top: -2px;
   /* font-weight: 900; */
 }
 
@@ -10627,6 +10636,7 @@ p {
   font-weight: 500;
   text-align: center;
   text-shadow: 5px 3px 10px #000000;
+  margin-left: 53px;
 }
 
 .dish-info ul, .dist-bottom-row ul {
@@ -10658,7 +10668,9 @@ p {
 
 .dish-info, .dist-bottom-row {
   padding: 0 50px;
-  margin-bottom: -35px;
+  /* padding-top: 20px; */
+  margin-top: 30px;
+  display: inline;
 }
 
 .dish-info {
